# data_collection_1st

./: .gitignore  01_mapping.ipynb  02_analysis.ipynb  03-class.ipynb  1_analysis.ipynb  2_analysis.ipynb  3_analysis.ipynb  4_analysis.ipynb  5_analysis.py  5_analysis_old.py  6_horse.py  7_solo.py  8_analysis.ipynb  first.py  listener.py  main.py  models_db.py  models_pd.py  output.py  process.py  processor.py  pyproject.toml  schema.sql  test.py  test_api.py  x_models_pd_old.py  x_process.py
database/: general.py  general.sql  models.py  s3.py  sql.py
process/: fixture.py  fixture_pull.py  fixture_push.py  helper.py  horse.py  race.py  track.py
upload/: fixture.py  fixture_pull.py  fixture_push.py  horse.py  jockey.py  owner.py  price_history.py  race_status_history.py  track.py  trainer.py
utils/: logger.py  sql.py
