[project]
name = "data-collection-1st"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.14",
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
    "pymysql>=1.1.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "schedule>=1.2.2",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.35.0",
    "watchtower>=3.4.0",
]
